--- a/ma.html
+++ b/ma.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-<title>Story — Pré-Lançamento | Mercado Agentes</title>
+<title>Story — Beta | Mercado Agentes</title>
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -173,35 +173,28 @@ body{
         </div>
 
         <div class="h1">
-          Se prepare para o <br>PRÉ-LANÇAMENTO<br>
-          do Marketplace do<br>
-          Mercado Agentes 🚀🤖
+          Vamos lá… agora sim 👀🔥
         </div>
 
         <div class="sub">
-          Um ambiente criado pra quem quer:
+          A versão <strong>BETA do Marketplace</strong> será liberada para um <strong>grupo seleto de usuários</strong>.
         </div>
 
         <div class="list">
-          ✨ Vender agentes em escala<br>
-          ✨ Transformar IA em negócio de verdade<br>
-          ✨ Construir renda recorrente com agentes inteligentes
+          ✔️ Testar o marketplace<br>
+          ✔️ Cadastrar agentes<br>
+          ✔️ Navegar, usar, experimentar<br>
+          ✔️ E nos dar <strong>feedback real</strong> pra melhorar a plataforma
         </div>
 
         <div class="alert">
-          ⚠️ ATENÇÃO, ISSO É IMPORTANTE:<br>
-          Antes do lançamento oficial, vamos abrir uma<br>
-          <strong>VERSÃO BETA FECHADA</strong> 😎
-        </div>
-
-        <div class="footer">
-          E quem você acha que vai entrar primeiro?<br>
-          👉 Os VIPs. Os visionários. <br>Quem está à frente do jogo. 💥
+          Em troca…<br>
+          👉 quem participar do beta <strong>VAI GANHAR PRESENTE!</strong> 😏
         </div>
 
         <div class="cta">
-          👀 Amanhã contaremos tudo como vai funcionar…<br>
-          Fica ligado porque isso aqui<br> vai mudar o jogo 🚀🔥
+          Amanhã eu revelo o presente que preparamos<br>
+          pra quem topar essa jornada com a gente.
         </div>
 
       </div>
