Fix line breaks in feedback and call to action

--- a/ma.html
+++ b/ma.html
@@ -185,7 +185,7 @@ body{
           ✔️ Testar o marketplace<br>
           ✔️ Cadastrar agentes<br>
           ✔️ Navegar, usar, experimentar<br>
-          ✔️ E nos dar <strong>feedback real</strong> pra melhorar a plataforma
+          ✔️ E nos <br>dar <strong>feedback real</strong><br> pra melhorar a plataforma
         </div>
 
         <div class="alert">
@@ -194,7 +194,7 @@ body{
         </div>
 
         <div class="cta">
-          Amanhã eu revelo o presente que preparamos<br>
+          Amanhã eu revelo o<br> presente que preparamos<br>
           pra quem topar essa jornada com a gente.
         </div>
 
