Fix formatting of beta participation message

--- a/ma.html
+++ b/ma.html
@@ -190,7 +190,7 @@ body{
 
         <div class="alert">
           Em troca…<br>
-          👉 quem participar do beta <strong>VAI GANHAR PRESENTE!</strong> 😏
+          👉 quem participar do beta <br> <strong>VAI GANHAR PRESENTE!</strong> 😏
         </div>
 
         <div class="cta">
