--- a/ma.html
+++ b/ma.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-<title>Story — Beta | Mercado Agentes</title>
+<title>Story — Beta Aberto | Mercado Agentes</title>
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,11 +14,13 @@
   --text:#ffffff;
   --muted:rgba(255,255,255,.92);
   --ink:#0B1220;
-  --pad: clamp(14px, 3vw, 32px);
+  --pad: clamp(12px, 2.3vw, 22px);
+
+  /* controla “aperto” geral pra caber no Safari */
+  --gap: clamp(8px, 1.6vh, 14px);
 }
 
 *{box-sizing:border-box}
-
 html,body{height:100%}
 
 body{
@@ -33,25 +35,17 @@ body{
   justify-content:center;
 }
 
+/* Story base (1080x1920) + adapta pra Safari */
 .story{
   position:relative;
   width:1080px;
   height:1920px;
   overflow:hidden;
-  background: linear-gradient(
-    180deg,
-    #8CC8FF 0%,
-    #5BA8FF 35%,
-    #2F77F2 70%,
-    #1F5CE0 100%
-  );
+  background: linear-gradient(180deg,#8CC8FF 0%,#5BA8FF 35%,#2F77F2 70%,#1F5CE0 100%);
 }
 
 @media (max-width:1100px){
-  .story{
-    width:100vw;
-    height:100vh;
-  }
+  .story{ width:100vw; height:100vh; }
 }
 
 .story::before{
@@ -59,19 +53,14 @@ body{
   position:absolute;
   inset:-12%;
   background:
-    radial-gradient(800px 600px at 20% 10%, rgba(255,255,255,.16), transparent 65%),
-    radial-gradient(800px 600px at 80% 20%, rgba(34,211,238,.12), transparent 62%);
+    radial-gradient(800px 600px at 20% 10%, rgba(255,255,255,.14), transparent 65%),
+    radial-gradient(800px 600px at 80% 20%, rgba(34,211,238,.10), transparent 62%);
   pointer-events:none;
 }
 
-.scroll{
+.content{
   position:relative;
   z-index:1;
-  height:100%;
-  overflow:hidden;
-}
-
-.content{
   height:100%;
   padding:
     calc(var(--pad) + env(safe-area-inset-top))
@@ -82,123 +71,205 @@ body{
   display:flex;
   flex-direction:column;
   align-items:center;
-  gap:14px;
+  justify-content:flex-start;
+  gap: var(--gap);
 }
 
-.brand{
-  align-self:flex-start;
-}
+/* logo */
+.brand{ align-self:flex-start; }
 .brand img{
-  width:65px;
+  width:52px;
   height:auto;
   filter: drop-shadow(0 10px 30px rgba(0,0,0,.22));
 }
 
+/* título (menor pra caber no Safari) */
 .h1{
-  max-width:880px;
+  width:min(900px, 96%);
   text-align:center;
-  font-size:clamp(30px, 6vw, 48px);
+  font-size:clamp(22px, 4.5vw, 36px);
   font-weight:900;
   line-height:1.12;
   letter-spacing:-0.03em;
   color:var(--text);
-  text-shadow:0 12px 36px rgba(0,0,0,.25);
+  text-shadow:0 12px 36px rgba(0,0,0,.22);
 }
 
 .sub{
-  width:min(760px, 92%);
-  font-size:clamp(16px, 3.4vw, 22px);
-  font-weight:600;
-  line-height:1.5;
+  width:min(820px, 94%);
+  font-size:clamp(13px, 2.7vw, 18px);
+  font-weight:700;
+  line-height:1.38;
   color:var(--muted);
   text-align:center;
 }
 
-.list{
-  width:min(760px, 92%);
-  display:flex;
-  flex-direction:column;
-  gap:8px;
-  font-size:clamp(16px, 3.3vw, 22px);
-  font-weight:700;
-  color:#fff;
-  text-align:center;
+/* bloco principal */
+.block{
+  width:min(840px, 94%);
+  padding:12px 14px;
+  border-radius:18px;
+  background: rgba(255,255,255,.14);
+  border:1px solid rgba(255,255,255,.26);
+  backdrop-filter: blur(10px);
+  box-shadow:0 18px 46px rgba(0,0,0,.14);
 }
 
-.alert{
-  width:min(760px, 92%);
-  padding:14px 18px;
+.p{
+  margin:0;
+  font-size:clamp(12px, 2.6vw, 17px);
+  font-weight:700;
+  line-height:1.35;
+  color:#fff;
+  text-align:left;
+}
+.p + .p{ margin-top:10px; }
+
+.kicker{
+  display:inline-block;
+  margin-bottom:6px;
+  padding:8px 10px;
+  border-radius:999px;
+  background: rgba(255,255,255,.18);
+  border:1px solid rgba(255,255,255,.30);
+  font-size:clamp(11px, 2.4vw, 14px);
+  font-weight:900;
+  letter-spacing:0.02em;
+}
+
+.bold{ font-weight:900; }
+.italic{ font-style:italic; }
+
+/* lista compacta */
+.ul{
+  margin:8px 0 0 0;
+  padding:0;
+  list-style:none;
+  display:flex;
+  flex-direction:column;
+  gap:6px;
+}
+.li{
+  display:flex;
+  gap:8px;
+  align-items:flex-start;
+  font-size:clamp(12px, 2.6vw, 16px);
+  font-weight:800;
+  line-height:1.25;
+  color:#fff;
+}
+.li .dot{ width:18px; flex:0 0 18px; text-align:center; }
+
+/* cards de benefício (mais compactos) */
+.grid{
+  width:min(840px, 94%);
+  display:grid;
+  grid-template-columns: 1fr;
+  gap:10px;
+}
+
+.card{
+  padding:12px 14px;
   border-radius:18px;
   background: linear-gradient(180deg, rgba(255,255,255,.90), rgba(255,255,255,.72));
   color:var(--ink);
-  font-weight:800;
-  font-size:clamp(16px, 3.3vw, 22px);
-  text-align:center;
-  box-shadow:0 18px 46px rgba(0,0,0,.18);
+  box-shadow:0 18px 46px rgba(0,0,0,.16);
 }
 
-.footer{
-  width:min(760px, 92%);
-  font-size:clamp(16px, 3.3vw, 22px);
+.card .t{
+  margin:0 0 6px 0;
+  font-size:clamp(13px, 2.8vw, 17px);
+  font-weight:900;
+  line-height:1.2;
+  text-align:left;
+}
+.card .b{
+  margin:0;
+  font-size:clamp(12px, 2.6vw, 16px);
   font-weight:800;
-  color:#fff;
-  text-align:center;
-  line-height:1.45;
+  line-height:1.3;
+  text-align:left;
+}
+.card .b .small{
+  font-weight:700;
+  opacity:.95;
 }
 
+/* CTA botão */
 .cta{
-  width:min(760px, 94%);
-  padding:14px 18px;
+  width:min(840px, 94%);
+  padding:12px 16px;
   border-radius:999px;
   background: rgba(255,255,255,.18);
   border:1px solid rgba(255,255,255,.35);
   backdrop-filter: blur(12px);
   color:#fff;
-  font-weight:800;
-  font-size:clamp(15px, 3.2vw, 20px);
+  font-weight:900;
+  font-size:clamp(12px, 2.7vw, 16px);
   text-align:center;
-  box-shadow:0 14px 40px rgba(0,0,0,.16);
+  box-shadow:0 14px 40px rgba(0,0,0,.14);
+}
+
+/* ajuste extra pra telas baixas do Safari */
+@media (max-height: 780px){
+  :root{ --gap: 8px; }
+  .brand img{ width:46px; }
+  .block, .card{ padding:10px 12px; border-radius:16px; }
+  .p + .p{ margin-top:8px; }
 }
 </style>
 </head>
 
 <body>
-  <br><br><br>
 <main class="page">
-  <section class="story">
-    <div class="scroll">
-      <div class="content">
+  <section class="story" aria-label="Story Beta Aberto">
+    <div class="content">
 
-        <div class="brand">
-          <img src="assets/img/logoma.avif" alt="Mercado Agentes">
+      <div class="brand">
+        <img src="assets/img/logoma.avif" alt="Mercado Agentes">
+      </div>
+
+      <div class="h1">
+        🥳 <span class="bold">OFICIALMENTE ABERTO</span> —<br>
+        <span class="bold">VERSÃO BETA DO MARKETPLACE</span> 🚀
+      </div>
+
+      <div class="sub">
+        Chegou a hora!! 😃<br>
+        ✅ A partir deste momento, você pode se cadastrar.<br>
+        Mas atenção: <span class="bold">quem entra AGORA</span> na versão Beta recebe benefícios que <span class="bold">não existirão depois</span>. 👇
+      </div>
+
+      <div class="grid">
+
+        <div class="card">
+          <p class="t">👁️ SELO VISIONÁRIO</p>
+          <p class="b">
+            Todos os participantes do Beta recebem o <span class="bold">Selo Visionário</span>, um selo exclusivo que:
+          </p>
+          <div class="ul" style="margin-top:8px">
+            <div class="li"><div class="dot">✔️</div><div>aumenta sua reputação</div></div>
+            <div class="li"><div class="dot">✔️</div><div>melhora seu ranqueamento no marketplace</div></div>
+            <div class="li"><div class="dot">✔️</div><div>gera mais destaque e visibilidade para seus agentes</div></div>
+          </div>
         </div>
 
-        <div class="h1">
-          Vamos lá… agora sim 👀🔥
-        </div>
-
-        <div class="sub">
-          A versão <strong>BETA do Marketplace</strong> será liberada para um <strong>grupo seleto de usuários</strong>.
-        </div>
-
-        <div class="list">
-          ✔️ Testar o marketplace<br>
-          ✔️ Cadastrar agentes<br>
-          ✔️ Navegar, usar, experimentar<br>
-          ✔️ E nos <br>dar <strong>feedback real</strong><br> pra melhorar a plataforma
-        </div>
-
-        <div class="alert">
-          Em troca…<br>
-          👉 quem participar do beta <br> <strong>VAI GANHAR PRESENTE!</strong> 😏
-        </div>
-
-        <div class="cta">
-          Amanhã eu revelo o<br> presente que preparamos<br>
-          pra quem topar essa jornada com a gente.
+        <div class="card">
+          <p class="t">🎁 3 MESES GRÁTIS DO PLANO STARTER</p>
+          <p class="b">
+            Além do selo, quem entra agora recebe <span class="bold">3 meses gratuitos</span> do plano Starter,
+            para começar sem barreiras e com vantagem real desde o início.
+          </p>
         </div>
 
       </div>
+
+      <div class="cta">
+        👉 As inscrições da versão Beta estão oficialmente abertas.<br>
+        <span class="bold">Bem-vindos ao começo de algo grande.</span> 🚀<br><br>
+        <span class="bold">Clique aqui</span>
+      </div>
+
     </div>
   </section>
 </main>
