--- a/ma.html
+++ b/ma.html
@@ -15,8 +15,6 @@
   --muted:rgba(255,255,255,.92);
   --ink:#0B1220;
   --pad: clamp(12px, 2.3vw, 22px);
-
-  /* controla “aperto” geral pra caber no Safari */
   --gap: clamp(8px, 1.6vh, 14px);
 }
 
@@ -35,7 +33,6 @@ body{
   justify-content:center;
 }
 
-/* Story base (1080x1920) + adapta pra Safari */
 .story{
   position:relative;
   width:1080px;
@@ -73,9 +70,11 @@ body{
   align-items:center;
   justify-content:flex-start;
   gap: var(--gap);
+
+  /* 🔽 desce tudo um pouco */
+  margin-top: 32px;
 }
 
-/* logo */
 .brand{ align-self:flex-start; }
 .brand img{
   width:52px;
@@ -83,7 +82,6 @@ body{
   filter: drop-shadow(0 10px 30px rgba(0,0,0,.22));
 }
 
-/* título (menor pra caber no Safari) */
 .h1{
   width:min(900px, 96%);
   text-align:center;
@@ -104,63 +102,6 @@ body{
   text-align:center;
 }
 
-/* bloco principal */
-.block{
-  width:min(840px, 94%);
-  padding:12px 14px;
-  border-radius:18px;
-  background: rgba(255,255,255,.14);
-  border:1px solid rgba(255,255,255,.26);
-  backdrop-filter: blur(10px);
-  box-shadow:0 18px 46px rgba(0,0,0,.14);
-}
-
-.p{
-  margin:0;
-  font-size:clamp(12px, 2.6vw, 17px);
-  font-weight:700;
-  line-height:1.35;
-  color:#fff;
-  text-align:left;
-}
-.p + .p{ margin-top:10px; }
-
-.kicker{
-  display:inline-block;
-  margin-bottom:6px;
-  padding:8px 10px;
-  border-radius:999px;
-  background: rgba(255,255,255,.18);
-  border:1px solid rgba(255,255,255,.30);
-  font-size:clamp(11px, 2.4vw, 14px);
-  font-weight:900;
-  letter-spacing:0.02em;
-}
-
-.bold{ font-weight:900; }
-.italic{ font-style:italic; }
-
-/* lista compacta */
-.ul{
-  margin:8px 0 0 0;
-  padding:0;
-  list-style:none;
-  display:flex;
-  flex-direction:column;
-  gap:6px;
-}
-.li{
-  display:flex;
-  gap:8px;
-  align-items:flex-start;
-  font-size:clamp(12px, 2.6vw, 16px);
-  font-weight:800;
-  line-height:1.25;
-  color:#fff;
-}
-.li .dot{ width:18px; flex:0 0 18px; text-align:center; }
-
-/* cards de benefício (mais compactos) */
 .grid{
   width:min(840px, 94%);
   display:grid;
@@ -181,21 +122,46 @@ body{
   font-size:clamp(13px, 2.8vw, 17px);
   font-weight:900;
   line-height:1.2;
-  text-align:left;
 }
+
 .card .b{
   margin:0;
   font-size:clamp(12px, 2.6vw, 16px);
   font-weight:800;
   line-height:1.3;
-  text-align:left;
-}
-.card .b .small{
-  font-weight:700;
-  opacity:.95;
 }
 
-/* CTA botão */
+/* 🔧 correção: texto do primeiro card NÃO fica branco */
+.card--light .t,
+.card--light .b,
+.card--light .li{
+  color:#0B1220;
+}
+
+.ul{
+  margin:8px 0 0 0;
+  padding:0;
+  list-style:none;
+  display:flex;
+  flex-direction:column;
+  gap:6px;
+}
+
+.li{
+  display:flex;
+  gap:8px;
+  align-items:flex-start;
+  font-size:clamp(12px, 2.6vw, 16px);
+  font-weight:800;
+  line-height:1.25;
+}
+
+.li .dot{
+  width:18px;
+  flex:0 0 18px;
+  text-align:center;
+}
+
 .cta{
   width:min(840px, 94%);
   padding:12px 16px;
@@ -210,19 +176,17 @@ body{
   box-shadow:0 14px 40px rgba(0,0,0,.14);
 }
 
-/* ajuste extra pra telas baixas do Safari */
 @media (max-height: 780px){
   :root{ --gap: 8px; }
   .brand img{ width:46px; }
-  .block, .card{ padding:10px 12px; border-radius:16px; }
-  .p + .p{ margin-top:8px; }
+  .card{ padding:10px 12px; border-radius:16px; }
 }
 </style>
 </head>
 
 <body>
 <main class="page">
-  <section class="story" aria-label="Story Beta Aberto">
+  <section class="story">
     <div class="content">
 
       <div class="brand">
@@ -230,24 +194,25 @@ body{
       </div>
 
       <div class="h1">
-        🥳 <span class="bold">OFICIALMENTE ABERTO</span> —<br>
-        <span class="bold">VERSÃO BETA DO MARKETPLACE</span> 🚀
+        🥳 OFICIALMENTE ABERTO —<br>
+        VERSÃO BETA DO MARKETPLACE 🚀
       </div>
 
       <div class="sub">
         Chegou a hora!! 😃<br>
         ✅ A partir deste momento, você pode se cadastrar.<br>
-        Mas atenção: <span class="bold">quem entra AGORA</span> na versão Beta recebe benefícios que <span class="bold">não existirão depois</span>. 👇
+        Mas atenção: <strong>quem entra AGORA</strong> recebe benefícios que <strong>não existirão depois</strong>. 👇
       </div>
 
       <div class="grid">
 
-        <div class="card">
+        <!-- 🔧 CARD COM TEXTO ESCURO (corrigido) -->
+        <div class="card card--light">
           <p class="t">👁️ SELO VISIONÁRIO</p>
           <p class="b">
-            Todos os participantes do Beta recebem o <span class="bold">Selo Visionário</span>, um selo exclusivo que:
+            Todos os participantes do Beta recebem o <strong>Selo Visionário</strong>, um selo exclusivo que:
           </p>
-          <div class="ul" style="margin-top:8px">
+          <div class="ul">
             <div class="li"><div class="dot">✔️</div><div>aumenta sua reputação</div></div>
             <div class="li"><div class="dot">✔️</div><div>melhora seu ranqueamento no marketplace</div></div>
             <div class="li"><div class="dot">✔️</div><div>gera mais destaque e visibilidade para seus agentes</div></div>
@@ -257,7 +222,7 @@ body{
         <div class="card">
           <p class="t">🎁 3 MESES GRÁTIS DO PLANO STARTER</p>
           <p class="b">
-            Além do selo, quem entra agora recebe <span class="bold">3 meses gratuitos</span> do plano Starter,
+            Além do selo, quem entra agora recebe <strong>3 meses gratuitos</strong> do plano Starter,
             para começar sem barreiras e com vantagem real desde o início.
           </p>
         </div>
@@ -266,8 +231,8 @@ body{
 
       <div class="cta">
         👉 As inscrições da versão Beta estão oficialmente abertas.<br>
-        <span class="bold">Bem-vindos ao começo de algo grande.</span> 🚀<br><br>
-        <span class="bold">Clique aqui</span>
+        <strong>Bem-vindos ao começo de algo grande.</strong> 🚀<br><br>
+        <strong>Clique aqui</strong>
       </div>
 
     </div>
