--- a/newsletter.html
+++ b/newsletter.html
@@ -33,6 +33,63 @@
       font-weight:600;
       margin-top: 10px;
     }
+    body{
+  margin:0;
+  min-height:100vh;
+  display:grid;
+  place-items:center;
+  background:#0b0f1a;
+  font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+}
+
+/* CONTAINER DO FUNDO */
+.bg-frame{
+  position:fixed;
+  inset:0;
+  z-index:-1;
+  overflow:hidden;
+  background:
+    radial-gradient(920px 760px at 18% 16%, rgba(14,107,255,.34), transparent 62%),
+    radial-gradient(860px 740px at 88% 84%, rgba(47,140,255,.26), transparent 62%),
+    linear-gradient(135deg, #000 0%, #040818 35%, #060e28 62%, #000 100%);
+}
+
+/* streak superior */
+.bg-streak{
+  position:absolute;
+  inset:-160px -300px auto -300px;
+  height:620px;
+  transform:rotate(-18deg);
+  background: radial-gradient(closest-side, rgba(14,107,255,.62), rgba(14,107,255,.10) 55%, transparent 78%);
+  filter:blur(2px);
+  opacity:.95;
+  pointer-events:none;
+}
+
+/* streak inferior */
+.bg-streak--2{
+  position:absolute;
+  inset:auto -340px -300px -340px;
+  height:760px;
+  transform:rotate(12deg);
+  background: radial-gradient(closest-side, rgba(47,140,255,.48), rgba(47,140,255,.12) 56%, transparent 80%);
+  opacity:.9;
+  pointer-events:none;
+}
+
+/* ruído */
+.bg-noise{
+  position:absolute; 
+  inset:0;
+  background-image:
+    linear-gradient(rgba(255,255,255,.04) 1px, transparent 1px),
+    linear-gradient(90deg, rgba(255,255,255,.04) 1px, transparent 1px);
+  background-size:56px 56px;
+  opacity:.10;
+  mask-image:radial-gradient(closest-side at 50% 45%, rgba(0,0,0,.9), transparent 72%);
+  pointer-events:none;
+}
+
   </style>
 </head>
 
