--- a/newsletter.html
+++ b/newsletter.html
@@ -129,14 +129,13 @@
             <div class="form-header form-shell__hide-on-success">
               <div>
                 <h1 class="form-title">
-                  Entre na <span class="gradient-text">Lista IA</span> da Tullu
+                  Receba toda semana <span class="gradient-text">como usar IA</span> no seu negócio
                 </h1>
 
                 <div class="campaign-badge">⚡ Dicas práticas, sem teoria</div>
 
-                <p class="form-subtitle" style="margin-top:14px;">
-                  Um resumo semanal com <b>prompts</b>, <b>templates</b> e <b>automações</b> que você aplica no mesmo dia
-                  pra ganhar tempo, vender mais e operar com menos fricção.
+                <p class="form-subtitle" style="margin-top:14px; font-color:white; font-size:20px;">
+                Casos práticos, <b>ferramentas acessíveis</b> e <b>passos claros</b> para aplicar <b>IA no dia a dia: vendas, atendimento, agenda e organização.</b>
                 </p>
               </div>
             </div>
