--- a/newsletter.html
+++ b/newsletter.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Entrar na Lista IA — Tullu Motion</title>
-  <meta name="description" content="Entre na Lista IA da Tullu Motion e receba dicas práticas toda semana para acelerar seu negócio com IA." />
+  <title>Entrar na newslettter — Tullu Motion</title>
+  <meta name="description" content="Entre na newslettter da Tullu Motion e receba dicas práticas toda semana para acelerar seu negócio com IA." />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -176,7 +176,7 @@
                 <label class="pill" style="align-items:flex-start; border-radius: 16px; padding: 14px; cursor: pointer;">
                   <input type="checkbox" id="consent" name="consent" data-required="true" style="margin-top: 2px;">
                   <span style="line-height: 1.45;">
-                    Eu aceito receber conteúdos da Lista IA por e-mail e WhatsApp<span class="req">*</span>
+                    Eu aceito receber conteúdos da newslettter por e-mail e WhatsApp<span class="req">*</span>
                     <div style="margin-top:.35rem; color: var(--muted);">
                       Você pode sair quando quiser. Não fazemos spam.
                     </div>
@@ -187,13 +187,13 @@
               <div class="form-actions">
                 <span></span>
                 <button type="submit" class="btn btn--primary btn--large" id="submitBtn">
-                  Entrar na Lista IA
+                  Entrar na newslettter
                 </button>
               </div>
 
               <p class="lgpd-note" style="margin-top: 10px;">
                 <span class="lgpd-asterisk" style="font-size: 12px;">*</span>
-                Ao enviar, você concorda com o tratamento dos dados para cadastro na Lista IA e comunicações relacionadas,
+                Ao enviar, você concorda com o tratamento dos dados para cadastro na newslettter e comunicações relacionadas,
                 conforme a <a href="https://tullumotion.com/assets/docs/politica.pdf" target="_blank" rel="noopener">Política de Privacidade</a>.
               </p>
             </form>
@@ -253,7 +253,7 @@
             <span class="footer__logo-text"></span>
           </div>
           <p class="footer__description">
-            Lista IA — prompts, templates e automações para acelerar negócios no Brasil.
+            newslettter — prompts, templates e automações para acelerar negócios no Brasil.
           </p>
         </div>
 
