Add flexbox styling to form actions

--- a/newsletter.html
+++ b/newsletter.html
@@ -89,6 +89,10 @@
   mask-image:radial-gradient(closest-side at 50% 45%, rgba(0,0,0,.9), transparent 72%);
   pointer-events:none;
 }
+.form-actions{
+  display:flex;
+  justify-content:center;
+}
 
   </style>
 </head>
