Add background divs to newsletter layout
Added background elements for visual enhancement.

--- a/newsletter.html
+++ b/newsletter.html
@@ -98,6 +98,12 @@
 </head>
 
 <body>
+  <div class="bg-frame">
+  <div class="bg-streak"></div>
+  <div class="bg-streak--2"></div>
+  <div class="bg-noise"></div>
+</div>
+
   <header class="header" id="header">
     <nav class="nav container">
       <div class="nav__logo">
