--- a/newsletter.html
+++ b/newsletter.html
@@ -296,6 +296,7 @@
 
   <script src="assets/js/main.js"></script>
   <script src="assets/js/branch-animations.js"></script>
-  <script src="assets/js/formnewsletter.js"></script>
+<script src="assets/js/newsletter.js"></script>
+
 </body>
 </html>
