--- a/newsletter.html
+++ b/newsletter.html
@@ -296,7 +296,8 @@
 
   <script src="assets/js/main.js"></script>
   <script src="assets/js/branch-animations.js"></script>
-<script src="assets/js/newsletter.js"></script>
+<script src="assets/js/formnewsletter.js"></script>
+
 
 </body>
 </html>
