ajuste na home do Tullu Motion

--- a/newsletter.html
+++ b/newsletter.html
@@ -144,7 +144,7 @@
 
                 <div class="campaign-badge">⚡ Dicas práticas, sem teoria</div>
 
-                <p class="form-subtitle" style="margin-top:14px; font-color:white; font-size:20px;">
+                <p class="form-subtitle" style="margin-top:14px; color:white; font-size:20px;">
                 
                 </p>
               </div>
