--- a/newsletter.html
+++ b/newsletter.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Entrar na newslettter - Tullu Motion</title>
+  <title>Entrar na newslettter- Tullu Motion</title>
   <meta name="description" content="Entre na newslettter da Tullu Motion e receba dicas práticas toda semana para acelerar seu negócio com IA." />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -145,7 +145,7 @@
                 <div class="campaign-badge">⚡ Dicas práticas, sem teoria</div>
 
                 <p class="form-subtitle" style="margin-top:14px; color:white; font-size:20px;">
-                
+                Casos práticos, <b>ferramentas acessíveis</b> e <b>passos claros</b> para aplicar <b>IA no dia a dia: vendas, atendimento, agenda e organização.</b>
                 </p>
               </div>
             </div>
