--- a/aboutkael.html
+++ b/aboutkael.html
@@ -1,13 +1,11 @@
-<!doctype html>
-<html lang="pt-br">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+<html lang="pt-br"><head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Story — Lista IA (1080x1730)</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Poppins:wght@500;600;700;800&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&amp;family=Poppins:wght@500;600;700;800&amp;display=swap" rel="stylesheet">
 
   <style>
     :root{
@@ -227,8 +225,8 @@
         <div class="kicker">Pra quem quer ganhar tempo e dinheiro</div>
 
         <h1>
-          Receba <br><span class="grad">toda semana</span><br>
-          como usar IA no seu negócio.
+          Receba grátis <br><span class="grad">toda semana</span><br>
+          como usar IA no seu negócio &nbsp; ➜
         </h1>
 
         <p class="sub">
@@ -255,5 +253,5 @@
       </div>
     </div>
   </div>
-</body>
-</html>
+
+</body></html>
