--- a/aboutkael.html
+++ b/aboutkael.html
@@ -203,6 +203,14 @@
       body{ padding:14px; }
       .frame{ transform: scale(calc((100vw - 28px) / 1080)); transform-origin: top center; }
     }
+    html, body {
+  width: 375px;      /* largura de iPhone */
+  max-width: 375px;
+  margin: 0 auto;    /* centraliza na tela */
+  background: #000;  /* fundo escuro para contraste */
+}
+
+    
   </style>
 </head>
 
