--- a/aboutkael.html
+++ b/aboutkael.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Story — Lista IA (1080x1730)</title>
+  <title>Story — Lista IA</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,39 +21,25 @@
     }
 
     *{box-sizing:border-box}
-    html,body{height:100%}
+    html,body{height:100%; margin:0}
     body{
-      margin:0;
+      background:#0b0f1a;
       display:grid;
       place-items:center;
-      background:#0b0f1a;
       font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
     }
 
-    /* ===== VISUALIZAÇÃO PARA PRINT (SIMULA MOBILE) ===== */
-    .preview{
-      width:430px;              /* largura iPhone 14 Pro Max */
-      max-width:100vw;
-      margin:0 auto;
-      padding:16px 0;
-      display:grid;
-      place-items:start center;
-      background:#0b0f1a;
-    }
-
-    /* ===== ARTE REAL ===== */
-    .frame{
-      width:1080px;
-      height:1730px;
-      position:relative;
-      overflow:hidden;
-      border-radius:34px;
+    /* ===== CONTAINER RESPONSIVO PARA PRINT ===== */
+    .canvas{
+      width: min(1080px, 100vw);
+      aspect-ratio: 1080 / 1730;
+      position: relative;
+      overflow: hidden;
+      border-radius: 28px;
       background:
         radial-gradient(920px 760px at 18% 16%, rgba(14,107,255,.34), transparent 62%),
         radial-gradient(860px 740px at 88% 84%, rgba(47,140,255,.26), transparent 62%),
         linear-gradient(135deg, #000 0%, #040818 35%, #060e28 62%, #000 100%);
-      transform: scale(0.398); /* 430 / 1080 ≈ 0.398 */
-      transform-origin: top center;
     }
 
     .streak{
@@ -62,9 +48,7 @@
       height:620px;
       transform:rotate(-18deg);
       background: radial-gradient(closest-side, rgba(14,107,255,.62), rgba(14,107,255,.10) 55%, transparent 78%);
-      filter:blur(2px);
-      opacity:.95;
-      pointer-events:none;
+      opacity:.9;
     }
 
     .streak--2{
@@ -74,59 +58,44 @@
       transform:rotate(12deg);
       background: radial-gradient(closest-side, rgba(47,140,255,.48), rgba(47,140,255,.12) 56%, transparent 80%);
       opacity:.9;
-      pointer-events:none;
-    }
-
-    .noise{
-      position:absolute; inset:0;
-      background-image:
-        linear-gradient(rgba(255,255,255,.04) 1px, transparent 1px),
-        linear-gradient(90deg, rgba(255,255,255,.04) 1px, transparent 1px);
-      background-size:56px 56px;
-      opacity:.10;
-      mask-image:radial-gradient(closest-side at 50% 45%, rgba(0,0,0,.9), transparent 72%);
-      pointer-events:none;
     }
 
     .wrap{
       position:absolute;
       inset:0;
-      padding:80px 84px 84px;
+      padding:7%;
       display:flex;
       flex-direction:column;
-      gap:36px;
+      gap:32px;
     }
 
-    .top .brand img{
-      width:120px; height:120px;
-      object-fit:contain;
+    .brand img{
+      width:110px;
       filter:drop-shadow(0 14px 26px rgba(14,107,255,.28));
     }
 
     .hero{
-      flex:1;
       display:flex;
       flex-direction:column;
-      gap:30px;
+      gap:24px;
     }
 
     .kicker{
       font-weight:800;
-      font-size:18px;
-      color:rgba(248,250,252,.75);
+      font-size:16px;
       letter-spacing:.18em;
       text-transform:uppercase;
+      color:rgba(248,250,252,.75);
     }
 
     h1{
       margin:0;
       font-family:Poppins,Inter,sans-serif;
       font-weight:800;
-      font-size:98px;
-      line-height:1.02;
-      letter-spacing:-.055em;
+      font-size:clamp(36px, 6vw, 96px);
+      line-height:1.05;
+      letter-spacing:-.04em;
       color:var(--text);
-      max-width:1000px;
     }
 
     .grad{
@@ -137,56 +106,50 @@
     }
 
     .sub{
-      font-size:26px;
-      line-height:1.65;
+      font-size:clamp(16px, 2.2vw, 26px);
+      line-height:1.6;
       color:var(--muted);
-      max-width:980px;
+      max-width:90%;
     }
 
     .card{
-      margin-top:28px;
-      padding:38px 38px;
-      border-radius:28px;
+      margin-top:18px;
+      padding:24px;
+      border-radius:22px;
       background:var(--card);
       border:1px solid var(--stroke);
       box-shadow:0 36px 90px rgba(0,0,0,.6);
       backdrop-filter: blur(12px);
-      width:100%;
     }
 
     .card h2{
-      margin:0 0 22px;
+      margin:0 0 18px;
       font-family:Poppins,Inter,sans-serif;
-      font-size:26px;
-      letter-spacing:-.02em;
+      font-size:22px;
       color:#fff;
     }
 
     .list{
       display:flex;
       flex-direction:column;
-      gap:22px;
+      gap:14px;
     }
 
     .row{
       display:flex;
-      align-items:flex-start;
-      gap:18px;
-      padding:18px 20px;
-      border-radius:20px;
+      gap:14px;
+      padding:14px 16px;
+      border-radius:16px;
       background:rgba(2,6,23,.40);
       border:1px solid rgba(255,255,255,.10);
     }
 
     .toggle{
-      width:56px; height:32px;
+      width:46px; height:26px;
       border-radius:999px;
-      border:1px solid rgba(14,107,255,.26);
       background:rgba(14,107,255,.12);
       position:relative;
       flex:0 0 auto;
-      margin-top:4px;
-      box-shadow:0 14px 34px rgba(0,0,0,.4);
     }
 
     .toggle:before{
@@ -194,69 +157,63 @@
       position:absolute;
       top:50%; left:6px;
       transform:translateY(-50%);
-      width:22px; height:22px;
+      width:18px; height:18px;
       border-radius:99px;
       background:linear-gradient(180deg, rgba(34,211,238,1), rgba(14,107,255,1));
-      box-shadow:0 0 20px rgba(14,107,255,.65);
     }
 
     .row p{
       margin:0;
-      font-size:20px;
-      line-height:1.45;
+      font-size:clamp(14px, 1.8vw, 18px);
+      line-height:1.4;
       color:rgba(248,250,252,.92);
     }
 
     .micro{
-      margin-top:24px;
-      font-size:16px;
-      line-height:1.6;
+      margin-top:14px;
+      font-size:13px;
+      line-height:1.5;
       color:rgba(248,250,252,.65);
     }
   </style>
 </head>
 
 <body>
-  <div class="preview">
-    <div class="frame">
-      <div class="streak"></div>
-      <div class="streak--2"></div>
-      <div class="noise"></div>
+  <div class="canvas">
+    <div class="streak"></div>
+    <div class="streak--2"></div>
 
-      <div class="wrap">
-        <div class="top">
-          <div class="brand">
-            <img src="assets/img/tullu.png" alt="Tullu Motion">
+    <div class="wrap">
+      <div class="brand">
+        <img src="assets/img/tullu.png" alt="Tullu Motion">
+      </div>
+
+      <div class="hero">
+        <div class="kicker">Pra quem quer ganhar tempo e dinheiro</div>
+
+        <h1>
+          Receba grátis <br>
+          <span class="grad">toda semana</span><br>
+          como usar IA no seu negócio →
+        </h1>
+
+        <p class="sub">
+          Um resumo prático com <b>prompts</b>, <b>templates</b> e <b>automações</b> que empresas usam
+          para vender mais e operar com menos fricção.
+        </p>
+
+        <div class="card">
+          <h2>O que você vai receber</h2>
+
+          <div class="list">
+            <div class="row"><div class="toggle"></div><p><strong>Prompts prontos</strong> para atendimento, vendas e suporte.</p></div>
+            <div class="row"><div class="toggle"></div><p><strong>Playbooks reais</strong> que funcionam no mundo real.</p></div>
+            <div class="row"><div class="toggle"></div><p><strong>Stack recomendada</strong> com ferramentas e automações.</p></div>
+            <div class="row"><div class="toggle"></div><p><strong>Execução sem enrolação:</strong> lógica, números e ação.</p></div>
           </div>
-        </div>
 
-        <div class="hero">
-          <div class="kicker">Pra quem quer ganhar tempo e dinheiro</div>
-
-          <h1>
-            Receba grátis <br><span class="grad">toda semana</span><br>
-            como usar IA no seu negócio &nbsp; ➜
-          </h1>
-
-          <p class="sub">
-            Um resumo prático com <b>prompts</b>, <b>templates</b> e <b>automações</b> que empresas usam
-            para vender mais e operar com menos fricção.
-          </p>
-
-          <div class="card">
-            <h2>O que você vai receber</h2>
-
-            <div class="list">
-              <div class="row"><div class="toggle"></div><p><strong>Prompts prontos</strong> para atendimento, vendas e suporte.</p></div>
-              <div class="row"><div class="toggle"></div><p><strong>Playbooks reais</strong> (o que funciona no mundo real, não teoria).</p></div>
-              <div class="row"><div class="toggle"></div><p><strong>Stack recomendada</strong> (ferramentas, integrações e automações).</p></div>
-              <div class="row"><div class="toggle"></div><p><strong>“Tubarões” sem enrolação:</strong> lógica, números e execução.</p></div>
-            </div>
-
-            <div class="micro">
-              <b>Sem spam.</b> Você sai quando quiser. Conteúdo inspirado nos melhores operadores e mentores,
-              traduzido pro <b>Brasil</b> e aplicado ao dia a dia.
-            </div>
+          <div class="micro">
+            <b>Sem spam.</b> Você sai quando quiser. Conteúdo aplicado ao dia a dia do Brasil.
           </div>
         </div>
       </div>
