--- a/newsletter.html
+++ b/newsletter.html
@@ -187,7 +187,7 @@
                   <input type="checkbox" id="consent" name="consent" data-required="true" style="margin-top: 2px;">
                   <span style="line-height: 1.45;">
                     Eu aceito receber conteúdos da newslettter por e-mail e WhatsApp<span class="req">*</span>
-                    <div style="margin-top:.35rem; color: var(--muted);">
+                    <div style="margin-top:.35rem; color: white;">
                       Você pode sair quando quiser. Não fazemos spam.
                     </div>
                   </span>
@@ -209,42 +209,51 @@
             </form>
 
             <!-- SUCESSO -->
-            <section id="successStep" class="success-step" hidden>
-              <h1 class="form-title" style="margin:0 0 8px;">Cadastro confirmado ✅</h1>
+           <section id="successStep" class="success-step" hidden>
 
-              <p class="form-subtitle" style="margin-top:0;">
-                Agora você vai receber no seu <b>e-mail</b> e no <b>WhatsApp</b> dicas práticas
-                para a IA acelerar seu negócio — com prompts, templates e automações aplicáveis.
-              </p>
+  <h1 class="form-title" style="margin:0 0 8px; text-align:center;">
+    Cadastro confirmado ✅
+  </h1>
 
-              <div class="glow-card" style="margin-top: 12px;">
-                <div class="cards-grid" style="grid-template-columns: 1fr; gap: 12px;">
-                  <div class="card-base" style="align-items:flex-start;">
-                    <div class="pain-card__icon">📩</div>
-                    <div>
-                      <strong>Entrega simples</strong>
-                      <div style="margin-top:.35rem; color: var(--muted);">
-                        Você recebe a edição da semana e aplica em minutos.
-                      </div>
-                    </div>
-                  </div>
+  <p class="form-subtitle" style="margin-top:0; color: white; text-align:center;">
+   Aqui você não vai receber teoria sobre IA. Só playbooks, prompts e automações prontas para gerar resultado.
+  </p>
 
-                  <div class="card-base" style="align-items:flex-start;">
-                    <div class="pain-card__icon">🧠</div>
-                    <div>
-                      <strong>Sem enrolação</strong>
-                      <div style="margin-top:.35rem; color: var(--muted);">
-                        Conteúdo direto pro Brasil, com foco em execução.
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
+  <div class="glow-card" style="margin-top: 12px;">
+    <div class="cards-grid cards-center" style="grid-template-columns: 1fr; gap: 12px;">
 
-              <div class="info-bubble info-bubble--blue" style="margin-top: 12px;">
-                Dica: salve o contato da Tullu pra não perder os avisos da semana.
-              </div>
-            </section>
+      <div class="card-base card-center">
+        <div class="pain-card__icon">⚙️</div>
+        <strong>Templates prontos para aplicar</strong>
+        <div style="margin-top:.35rem; color: white;">
+          Você recebe e aplica.
+        </div>
+      </div>
+
+      <div class="card-base card-center">
+        <div class="pain-card__icon">🧠</div>
+        <strong>Casos de uso para vender mais ou operar melhor</strong>
+        <div style="margin-top:.35rem; color: white;">
+          Conteúdo direto pro Brasil, com foco em execução.
+        </div>
+      </div>
+
+       <div class="card-base card-center">
+        <div class="pain-card__icon">🧠</div>
+        <strong>Sem enrolação</strong>
+        <div style="margin-top:.35rem; color: white;">
+          Automações reais usadas em empresas.
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="info-bubble info-bubble--blue" style="margin-top: 12px; text-align:center;">
+   <a href="https://tullumotion.com/aistudio.html">Quer receber também no WhatsApp?<br><span>Entrar no canal da Tullu</span></a>
+  </div>
+
+</section>
 
           </div>
 
