--- a/newsletter.html
+++ b/newsletter.html
@@ -78,6 +78,10 @@
     /* centraliza só os cards do sucesso sem criar CSS novo pesado */
     .cards-center .card-base{ text-align:center; justify-content:center; }
     .cards-center .pain-card__icon{ margin-right: 0; }
+    .form-actions{
+      text-align: center;
+      justify-content:center;
+    }
   </style>
 </head>
 
@@ -175,7 +179,7 @@
                   <input type="checkbox" id="consent" name="consent" data-required="true" style="margin-top: 2px;">
                   <span style="line-height: 1.45;">
                     Eu aceito receber conteúdos da newslettter por e-mail e WhatsApp<span class="req">*</span>
-                    <div style="margin-top:.35rem; color: var(--muted);">
+                    <div style="margin-top:.35rem; color: white;">
                       Você pode sair quando quiser. Não fazemos spam.
                     </div>
                   </span>
@@ -212,7 +216,7 @@
                     <div class="pain-card__icon">⚙️</div>
                     <div>
                       <strong>Templates prontos para aplicar</strong>
-                      <div style="margin-top:.35rem; color: var(--muted);">Você recebe e aplica.</div>
+                      <div style="margin-top:.35rem; color: white;">Você recebe e aplica.</div>
                     </div>
                   </div>
 
@@ -220,7 +224,7 @@
                     <div class="pain-card__icon">🧠</div>
                     <div>
                       <strong>Casos de uso pra vender mais ou operar melhor</strong>
-                      <div style="margin-top:.35rem; color: var(--muted);">Conteúdo direto pro Brasil, com foco em execução.</div>
+                      <div style="margin-top:.35rem; color: white;">Conteúdo direto pro Brasil, com foco em execução.</div>
                     </div>
                   </div>
 
@@ -228,7 +232,7 @@
                     <div class="pain-card__icon">🚫</div>
                     <div>
                       <strong>Sem enrolação</strong>
-                      <div style="margin-top:.35rem; color: var(--muted);">Automações reais usadas em empresas.</div>
+                      <div style="margin-top:.35rem; color: white;">Automações reais usadas em empresas.</div>
                     </div>
                   </div>
                 </div>
