--- a/tullujournal.html
+++ b/tullujournal.html
@@ -203,6 +203,7 @@
   <div class="top">
     <div class="brand">
       <img src="assets/img/tullu.png" alt="Tullu Motion">
+      <span class="footer__logo-text">Journal</span><br>
       <div class="pill">Tullu Journal • Pesquisa & Mercado</div>
     </div>
     <div class="pill">Próxima atualização: Fev 2026 • Mensal</div>
