--- a/newsletter.html
+++ b/newsletter.html
@@ -266,6 +266,7 @@
         <div class="footer__brand">
           <div class="footer__logo">
             <img src="assets/img/tullu.png" alt="Tullu Motion" class="footer__logo-img">
+            <h4 class="footer__section-title">Newsletter</h4>
             <span class="footer__logo-text"></span>
           </div>
           <p class="footer__description">
