--- a/newsletter.html
+++ b/newsletter.html
@@ -269,7 +269,7 @@
             <span class="footer__logo-text"></span>
           </div>
           <p class="footer__description">
-            newslettter — prompts, templates e automações para acelerar negócios no Brasil.
+            Newsletter — prompts, templates e automações para acelerar negócios no Brasil.
           </p>
         </div>
 
