--- a/aboutkael.html
+++ b/aboutkael.html
@@ -233,7 +233,7 @@
           <h1>
             Receba grátis <br>
             <span class="grad">toda semana</span><br>
-            como usar IA no seu negócio →
+            como usar IA no seu negócio
           </h1>
 
           <p class="sub">
