--- a/newsletter.html
+++ b/newsletter.html
@@ -242,13 +242,13 @@
               <div class="showcase__cta" style="margin-top: 14px; text-align:center;">
                 <a
                   class="btn btn--primary btn--large"
-                  href="https://wa.me/5511978217095?text=Quero%20entrar%20no%20canal%2Fgrupo%20da%20newsletter%20da%20Tullu%20no%20WhatsApp."
+                  href="https://tullumotion.com/aistudio.html"
                   target="_blank"
                   rel="noopener"
-                >Entrar no canal do WhatsApp</a>
+                >Conheça o AI Studio</a>
 
                 <div class="info-bubble info-bubble--blue" style="margin-top: 12px; text-align:center;">
-                  Você entra no WhatsApp e eu te coloco no canal/grupo da newsletter (sem spam).
+                  Respostas instantâneas, qualificação de leads e agendamentos organizados em um CRM. Menos conversa perdida, mais cliente avançando.
                 </div>
               </div>
             </section>
