Atualizar o formulario-teste.html

--- a/formulario-teste.html
+++ b/formulario-teste.html
@@ -62,7 +62,7 @@
                   Defina o <span class="gradient-text">DNA do seu agente</span>
                 </h1><br>
                 <p class="form-subtitle">
-                  Aqui você preenche o que não faz sentido coletar em conversa no WhatsApp: tom de voz, regras, termos proibidos, objetivos e base de conhecimento.
+                  Aqui vamos criar o escopo do seu agente de IA : tom de voz, regras, termos proibidos, objetivos e base de conhecimento.
                   Depois, você volta ao WhatsApp para confirmar que o DNA foi enviado.
                 </p><br>
               </div>
